[tool.poetry]
name = "Raspberry Pi Radio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "raspberry_radio", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.5.0"
asgiref = "3.5.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
click = "8.0.3"
colorzero = "2.0"
fastapi = "0.74.0"
gpiozero = "1.6.2"
gtts = "2.2.3"
h11 = "0.13.0"
idna = "3.3"
importlib-metadata = "4.11.1"
pydantic = "1.9.0"
python-multipart = "0.0.5"
python-vlc = "3.0.12118"
requests = "2.27.1"
six = "1.16.0"
sniffio = "1.2.0"
starlette = "0.17.1"
typing-extensions = "4.0.1"
urllib3 = "1.26.7"
uvicorn = "0.17.5"
zipp = "3.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
